parser_v2/y.output
State 22 conflicts: 6 shift/reduce
State 37 conflicts: 6 shift/reduce
State 75 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: headers main '(' ')' '{' body return '}'

    2 headers: headers INCLUDE
    3        | INCLUDE

    4 main: DATATYPE ID

    5 body: expressions
    6     | loops
    7     | conditionals
    8     | body expressions
    9     | body loops
   10     | body conditionals

   11 loops: FOR '(' statement ';' statement ';' statement ')' '{' body '}'

   12 expressions: expressions statement ';'
   13            | statement ';'

   14 conditionals: IF '(' condition ')' '{' expressions '}'
   15             | IF '(' condition ')' '{' expressions '}' ELSE '{' expressions '}'

   16 statement: ID BINARY statement
   17          | ID UNARY
   18          | UNARY ID
   19          | ID
   20          | NUMBER
   21          | DATATYPE variable
   22          | PRINTFF '(' STRLT ')'
   23          | SCANFF '(' STRLT ',' '&' ID ')'

   24 variable: ID array
   25         | '*' variable

   26 array: '[' NUMBER ']' array
   27      | '[' ID ']' array
   28      | '[' ']' array
   29      | %empty

   30 condition: condition BINARY condition
   31          | boolean

   32 boolean: ID BINARY ID
   33        | ID BINARY NUMBER
   34        | NUMBER BINARY ID
   35        | TRUE
   36        | FALSE

   37 return: RETURN NUMBER ';'
   38       | RETURN ID ';'
   39       | %empty


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 23
    '(' (40) 1 11 14 15 22 23
    ')' (41) 1 11 14 15 22 23
    '*' (42) 25
    ',' (44) 23
    ';' (59) 11 12 13 37 38
    '[' (91) 26 27 28
    ']' (93) 26 27 28
    '{' (123) 1 11 14 15
    '}' (125) 1 11 14 15
    error (256)
    INCLUDE (258) 2 3
    FOR (259) 11
    IF (260) 14 15
    ELSE (261) 15
    ID (262) 4 16 17 18 19 23 24 27 32 33 34 38
    NUMBER (263) 20 26 33 34 37
    UNARY (264) 17 18
    BINARY (265) 16 30 32 33 34
    DATATYPE (266) 4 21
    TRUE (267) 35
    FALSE (268) 36
    RETURN (269) 37 38
    PRINTFF (270) 22
    SCANFF (271) 23
    STRLT (272) 22 23


Nonterminals, with rules where they appear

    $accept (28)
        on left: 0
    program (29)
        on left: 1
        on right: 0
    headers (30)
        on left: 2 3
        on right: 1 2
    main (31)
        on left: 4
        on right: 1
    body (32)
        on left: 5 6 7 8 9 10
        on right: 1 8 9 10 11
    loops (33)
        on left: 11
        on right: 6 9
    expressions (34)
        on left: 12 13
        on right: 5 8 12 14 15
    conditionals (35)
        on left: 14 15
        on right: 7 10
    statement (36)
        on left: 16 17 18 19 20 21 22 23
        on right: 11 12 13 16
    variable (37)
        on left: 24 25
        on right: 21 25
    array (38)
        on left: 26 27 28 29
        on right: 24 26 27 28
    condition (39)
        on left: 30 31
        on right: 14 15 30
    boolean (40)
        on left: 32 33 34 35 36
        on right: 31
    return (41)
        on left: 37 38 39
        on right: 1


State 0

    0 $accept: . program $end

    INCLUDE  shift, and go to state 1

    program  go to state 2
    headers  go to state 3


State 1

    3 headers: INCLUDE .

    $default  reduce using rule 3 (headers)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: headers . main '(' ')' '{' body return '}'
    2 headers: headers . INCLUDE

    INCLUDE   shift, and go to state 5
    DATATYPE  shift, and go to state 6

    main  go to state 7


State 4

    0 $accept: program $end .

    $default  accept


State 5

    2 headers: headers INCLUDE .

    $default  reduce using rule 2 (headers)


State 6

    4 main: DATATYPE . ID

    ID  shift, and go to state 8


State 7

    1 program: headers main . '(' ')' '{' body return '}'

    '('  shift, and go to state 9


State 8

    4 main: DATATYPE ID .

    $default  reduce using rule 4 (main)


State 9

    1 program: headers main '(' . ')' '{' body return '}'

    ')'  shift, and go to state 10


State 10

    1 program: headers main '(' ')' . '{' body return '}'

    '{'  shift, and go to state 11


State 11

    1 program: headers main '(' ')' '{' . body return '}'

    FOR       shift, and go to state 12
    IF        shift, and go to state 13
    ID        shift, and go to state 14
    NUMBER    shift, and go to state 15
    UNARY     shift, and go to state 16
    DATATYPE  shift, and go to state 17
    PRINTFF   shift, and go to state 18
    SCANFF    shift, and go to state 19

    body          go to state 20
    loops         go to state 21
    expressions   go to state 22
    conditionals  go to state 23
    statement     go to state 24


State 12

   11 loops: FOR . '(' statement ';' statement ';' statement ')' '{' body '}'

    '('  shift, and go to state 25


State 13

   14 conditionals: IF . '(' condition ')' '{' expressions '}'
   15             | IF . '(' condition ')' '{' expressions '}' ELSE '{' expressions '}'

    '('  shift, and go to state 26


State 14

   16 statement: ID . BINARY statement
   17          | ID . UNARY
   19          | ID .

    UNARY   shift, and go to state 27
    BINARY  shift, and go to state 28

    $default  reduce using rule 19 (statement)


State 15

   20 statement: NUMBER .

    $default  reduce using rule 20 (statement)


State 16

   18 statement: UNARY . ID

    ID  shift, and go to state 29


State 17

   21 statement: DATATYPE . variable

    ID   shift, and go to state 30
    '*'  shift, and go to state 31

    variable  go to state 32


State 18

   22 statement: PRINTFF . '(' STRLT ')'

    '('  shift, and go to state 33


State 19

   23 statement: SCANFF . '(' STRLT ',' '&' ID ')'

    '('  shift, and go to state 34


State 20

    1 program: headers main '(' ')' '{' body . return '}'
    8 body: body . expressions
    9     | body . loops
   10     | body . conditionals

    FOR       shift, and go to state 12
    IF        shift, and go to state 13
    ID        shift, and go to state 14
    NUMBER    shift, and go to state 15
    UNARY     shift, and go to state 16
    DATATYPE  shift, and go to state 17
    RETURN    shift, and go to state 35
    PRINTFF   shift, and go to state 18
    SCANFF    shift, and go to state 19

    $default  reduce using rule 39 (return)

    loops         go to state 36
    expressions   go to state 37
    conditionals  go to state 38
    statement     go to state 24
    return        go to state 39


State 21

    6 body: loops .

    $default  reduce using rule 6 (body)


State 22

    5 body: expressions .
   12 expressions: expressions . statement ';'

    ID        shift, and go to state 14
    NUMBER    shift, and go to state 15
    UNARY     shift, and go to state 16
    DATATYPE  shift, and go to state 17
    PRINTFF   shift, and go to state 18
    SCANFF    shift, and go to state 19

    ID        [reduce using rule 5 (body)]
    NUMBER    [reduce using rule 5 (body)]
    UNARY     [reduce using rule 5 (body)]
    DATATYPE  [reduce using rule 5 (body)]
    PRINTFF   [reduce using rule 5 (body)]
    SCANFF    [reduce using rule 5 (body)]
    $default  reduce using rule 5 (body)

    statement  go to state 40


State 23

    7 body: conditionals .

    $default  reduce using rule 7 (body)


State 24

   13 expressions: statement . ';'

    ';'  shift, and go to state 41


State 25

   11 loops: FOR '(' . statement ';' statement ';' statement ')' '{' body '}'

    ID        shift, and go to state 14
    NUMBER    shift, and go to state 15
    UNARY     shift, and go to state 16
    DATATYPE  shift, and go to state 17
    PRINTFF   shift, and go to state 18
    SCANFF    shift, and go to state 19

    statement  go to state 42


State 26

   14 conditionals: IF '(' . condition ')' '{' expressions '}'
   15             | IF '(' . condition ')' '{' expressions '}' ELSE '{' expressions '}'

    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44
    TRUE    shift, and go to state 45
    FALSE   shift, and go to state 46

    condition  go to state 47
    boolean    go to state 48


State 27

   17 statement: ID UNARY .

    $default  reduce using rule 17 (statement)


State 28

   16 statement: ID BINARY . statement

    ID        shift, and go to state 14
    NUMBER    shift, and go to state 15
    UNARY     shift, and go to state 16
    DATATYPE  shift, and go to state 17
    PRINTFF   shift, and go to state 18
    SCANFF    shift, and go to state 19

    statement  go to state 49


State 29

   18 statement: UNARY ID .

    $default  reduce using rule 18 (statement)


State 30

   24 variable: ID . array

    '['  shift, and go to state 50

    $default  reduce using rule 29 (array)

    array  go to state 51


State 31

   25 variable: '*' . variable

    ID   shift, and go to state 30
    '*'  shift, and go to state 31

    variable  go to state 52


State 32

   21 statement: DATATYPE variable .

    $default  reduce using rule 21 (statement)


State 33

   22 statement: PRINTFF '(' . STRLT ')'

    STRLT  shift, and go to state 53


State 34

   23 statement: SCANFF '(' . STRLT ',' '&' ID ')'

    STRLT  shift, and go to state 54


State 35

   37 return: RETURN . NUMBER ';'
   38       | RETURN . ID ';'

    ID      shift, and go to state 55
    NUMBER  shift, and go to state 56


State 36

    9 body: body loops .

    $default  reduce using rule 9 (body)


State 37

    8 body: body expressions .
   12 expressions: expressions . statement ';'

    ID        shift, and go to state 14
    NUMBER    shift, and go to state 15
    UNARY     shift, and go to state 16
    DATATYPE  shift, and go to state 17
    PRINTFF   shift, and go to state 18
    SCANFF    shift, and go to state 19

    ID        [reduce using rule 8 (body)]
    NUMBER    [reduce using rule 8 (body)]
    UNARY     [reduce using rule 8 (body)]
    DATATYPE  [reduce using rule 8 (body)]
    PRINTFF   [reduce using rule 8 (body)]
    SCANFF    [reduce using rule 8 (body)]
    $default  reduce using rule 8 (body)

    statement  go to state 40


State 38

   10 body: body conditionals .

    $default  reduce using rule 10 (body)


State 39

    1 program: headers main '(' ')' '{' body return . '}'

    '}'  shift, and go to state 57


State 40

   12 expressions: expressions statement . ';'

    ';'  shift, and go to state 58


State 41

   13 expressions: statement ';' .

    $default  reduce using rule 13 (expressions)


State 42

   11 loops: FOR '(' statement . ';' statement ';' statement ')' '{' body '}'

    ';'  shift, and go to state 59


State 43

   32 boolean: ID . BINARY ID
   33        | ID . BINARY NUMBER

    BINARY  shift, and go to state 60


State 44

   34 boolean: NUMBER . BINARY ID

    BINARY  shift, and go to state 61


State 45

   35 boolean: TRUE .

    $default  reduce using rule 35 (boolean)


State 46

   36 boolean: FALSE .

    $default  reduce using rule 36 (boolean)


State 47

   14 conditionals: IF '(' condition . ')' '{' expressions '}'
   15             | IF '(' condition . ')' '{' expressions '}' ELSE '{' expressions '}'
   30 condition: condition . BINARY condition

    BINARY  shift, and go to state 62
    ')'     shift, and go to state 63


State 48

   31 condition: boolean .

    $default  reduce using rule 31 (condition)


State 49

   16 statement: ID BINARY statement .

    $default  reduce using rule 16 (statement)


State 50

   26 array: '[' . NUMBER ']' array
   27      | '[' . ID ']' array
   28      | '[' . ']' array

    ID      shift, and go to state 64
    NUMBER  shift, and go to state 65
    ']'     shift, and go to state 66


State 51

   24 variable: ID array .

    $default  reduce using rule 24 (variable)


State 52

   25 variable: '*' variable .

    $default  reduce using rule 25 (variable)


State 53

   22 statement: PRINTFF '(' STRLT . ')'

    ')'  shift, and go to state 67


State 54

   23 statement: SCANFF '(' STRLT . ',' '&' ID ')'

    ','  shift, and go to state 68


State 55

   38 return: RETURN ID . ';'

    ';'  shift, and go to state 69


State 56

   37 return: RETURN NUMBER . ';'

    ';'  shift, and go to state 70


State 57

    1 program: headers main '(' ')' '{' body return '}' .

    $default  reduce using rule 1 (program)


State 58

   12 expressions: expressions statement ';' .

    $default  reduce using rule 12 (expressions)


State 59

   11 loops: FOR '(' statement ';' . statement ';' statement ')' '{' body '}'

    ID        shift, and go to state 14
    NUMBER    shift, and go to state 15
    UNARY     shift, and go to state 16
    DATATYPE  shift, and go to state 17
    PRINTFF   shift, and go to state 18
    SCANFF    shift, and go to state 19

    statement  go to state 71


State 60

   32 boolean: ID BINARY . ID
   33        | ID BINARY . NUMBER

    ID      shift, and go to state 72
    NUMBER  shift, and go to state 73


State 61

   34 boolean: NUMBER BINARY . ID

    ID  shift, and go to state 74


State 62

   30 condition: condition BINARY . condition

    ID      shift, and go to state 43
    NUMBER  shift, and go to state 44
    TRUE    shift, and go to state 45
    FALSE   shift, and go to state 46

    condition  go to state 75
    boolean    go to state 48


State 63

   14 conditionals: IF '(' condition ')' . '{' expressions '}'
   15             | IF '(' condition ')' . '{' expressions '}' ELSE '{' expressions '}'

    '{'  shift, and go to state 76


State 64

   27 array: '[' ID . ']' array

    ']'  shift, and go to state 77


State 65

   26 array: '[' NUMBER . ']' array

    ']'  shift, and go to state 78


State 66

   28 array: '[' ']' . array

    '['  shift, and go to state 50

    $default  reduce using rule 29 (array)

    array  go to state 79


State 67

   22 statement: PRINTFF '(' STRLT ')' .

    $default  reduce using rule 22 (statement)


State 68

   23 statement: SCANFF '(' STRLT ',' . '&' ID ')'

    '&'  shift, and go to state 80


State 69

   38 return: RETURN ID ';' .

    $default  reduce using rule 38 (return)


State 70

   37 return: RETURN NUMBER ';' .

    $default  reduce using rule 37 (return)


State 71

   11 loops: FOR '(' statement ';' statement . ';' statement ')' '{' body '}'

    ';'  shift, and go to state 81


State 72

   32 boolean: ID BINARY ID .

    $default  reduce using rule 32 (boolean)


State 73

   33 boolean: ID BINARY NUMBER .

    $default  reduce using rule 33 (boolean)


State 74

   34 boolean: NUMBER BINARY ID .

    $default  reduce using rule 34 (boolean)


State 75

   30 condition: condition . BINARY condition
   30          | condition BINARY condition .

    BINARY  shift, and go to state 62

    BINARY    [reduce using rule 30 (condition)]
    $default  reduce using rule 30 (condition)


State 76

   14 conditionals: IF '(' condition ')' '{' . expressions '}'
   15             | IF '(' condition ')' '{' . expressions '}' ELSE '{' expressions '}'

    ID        shift, and go to state 14
    NUMBER    shift, and go to state 15
    UNARY     shift, and go to state 16
    DATATYPE  shift, and go to state 17
    PRINTFF   shift, and go to state 18
    SCANFF    shift, and go to state 19

    expressions  go to state 82
    statement    go to state 24


State 77

   27 array: '[' ID ']' . array

    '['  shift, and go to state 50

    $default  reduce using rule 29 (array)

    array  go to state 83


State 78

   26 array: '[' NUMBER ']' . array

    '['  shift, and go to state 50

    $default  reduce using rule 29 (array)

    array  go to state 84


State 79

   28 array: '[' ']' array .

    $default  reduce using rule 28 (array)


State 80

   23 statement: SCANFF '(' STRLT ',' '&' . ID ')'

    ID  shift, and go to state 85


State 81

   11 loops: FOR '(' statement ';' statement ';' . statement ')' '{' body '}'

    ID        shift, and go to state 14
    NUMBER    shift, and go to state 15
    UNARY     shift, and go to state 16
    DATATYPE  shift, and go to state 17
    PRINTFF   shift, and go to state 18
    SCANFF    shift, and go to state 19

    statement  go to state 86


State 82

   12 expressions: expressions . statement ';'
   14 conditionals: IF '(' condition ')' '{' expressions . '}'
   15             | IF '(' condition ')' '{' expressions . '}' ELSE '{' expressions '}'

    ID        shift, and go to state 14
    NUMBER    shift, and go to state 15
    UNARY     shift, and go to state 16
    DATATYPE  shift, and go to state 17
    PRINTFF   shift, and go to state 18
    SCANFF    shift, and go to state 19
    '}'       shift, and go to state 87

    statement  go to state 40


State 83

   27 array: '[' ID ']' array .

    $default  reduce using rule 27 (array)


State 84

   26 array: '[' NUMBER ']' array .

    $default  reduce using rule 26 (array)


State 85

   23 statement: SCANFF '(' STRLT ',' '&' ID . ')'

    ')'  shift, and go to state 88


State 86

   11 loops: FOR '(' statement ';' statement ';' statement . ')' '{' body '}'

    ')'  shift, and go to state 89


State 87

   14 conditionals: IF '(' condition ')' '{' expressions '}' .
   15             | IF '(' condition ')' '{' expressions '}' . ELSE '{' expressions '}'

    ELSE  shift, and go to state 90

    $default  reduce using rule 14 (conditionals)


State 88

   23 statement: SCANFF '(' STRLT ',' '&' ID ')' .

    $default  reduce using rule 23 (statement)


State 89

   11 loops: FOR '(' statement ';' statement ';' statement ')' . '{' body '}'

    '{'  shift, and go to state 91


State 90

   15 conditionals: IF '(' condition ')' '{' expressions '}' ELSE . '{' expressions '}'

    '{'  shift, and go to state 92


State 91

   11 loops: FOR '(' statement ';' statement ';' statement ')' '{' . body '}'

    FOR       shift, and go to state 12
    IF        shift, and go to state 13
    ID        shift, and go to state 14
    NUMBER    shift, and go to state 15
    UNARY     shift, and go to state 16
    DATATYPE  shift, and go to state 17
    PRINTFF   shift, and go to state 18
    SCANFF    shift, and go to state 19

    body          go to state 93
    loops         go to state 21
    expressions   go to state 22
    conditionals  go to state 23
    statement     go to state 24


State 92

   15 conditionals: IF '(' condition ')' '{' expressions '}' ELSE '{' . expressions '}'

    ID        shift, and go to state 14
    NUMBER    shift, and go to state 15
    UNARY     shift, and go to state 16
    DATATYPE  shift, and go to state 17
    PRINTFF   shift, and go to state 18
    SCANFF    shift, and go to state 19

    expressions  go to state 94
    statement    go to state 24


State 93

    8 body: body . expressions
    9     | body . loops
   10     | body . conditionals
   11 loops: FOR '(' statement ';' statement ';' statement ')' '{' body . '}'

    FOR       shift, and go to state 12
    IF        shift, and go to state 13
    ID        shift, and go to state 14
    NUMBER    shift, and go to state 15
    UNARY     shift, and go to state 16
    DATATYPE  shift, and go to state 17
    PRINTFF   shift, and go to state 18
    SCANFF    shift, and go to state 19
    '}'       shift, and go to state 95

    loops         go to state 36
    expressions   go to state 37
    conditionals  go to state 38
    statement     go to state 24


State 94

   12 expressions: expressions . statement ';'
   15 conditionals: IF '(' condition ')' '{' expressions '}' ELSE '{' expressions . '}'

    ID        shift, and go to state 14
    NUMBER    shift, and go to state 15
    UNARY     shift, and go to state 16
    DATATYPE  shift, and go to state 17
    PRINTFF   shift, and go to state 18
    SCANFF    shift, and go to state 19
    '}'       shift, and go to state 96

    statement  go to state 40


State 95

   11 loops: FOR '(' statement ';' statement ';' statement ')' '{' body '}' .

    $default  reduce using rule 11 (loops)


State 96

   15 conditionals: IF '(' condition ')' '{' expressions '}' ELSE '{' expressions '}' .

    $default  reduce using rule 15 (conditionals)
